--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,9 @@
 body {
   background-color: #000;
+  color: white;
 }
 
 #container {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   margin: 0;
