--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
 
   script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js')
   script(src='//cdnjs.cloudflare.com/ajax/libs/highcharts/4.2.3/highcharts.js')
-  script(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/4579/darkThemeHighCharts.js')
+  script(src='//s3-us-west-2.amazonaws.com/s.cdpn.io/4579/darkThemeHighCharts.js')
   script(src='//cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js')
 
   block page_scripts
