--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,8 +4,13 @@ body {
 }
 
 #container {
+  position: absolute;
+  top: 100px;
+  bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 100px);
   margin: 0;
 }
 
