added build:css script command

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,102 @@
-body {
-  background-color: #000;
-  color: white;
-}
-
-#container {
-  position: absolute;
-  top: 100px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: calc(100% - 100px);
-  margin: 0;
-}
-
-#chart {
-  width: 100%;
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,200,600,900,700");
+html, body {
   height: 100%;
-}
+  padding: 0;
+  margin: 0;
+  font-family: 'Source Sans Pro', sans-serif; }
+
+#main-column {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  color: #cdcfce; }
+  #main-column > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex: 1 1 auto; }
+  #main-column > #about {
+    flex: 1 1 0; }
+  #main-column > div#sensorValues {
+    flex: 1 1 0; }
+  #main-column > div#sensorData {
+    flex: 2 1 0;
+    padding: 0;
+    margin: 0; }
+
+.dashboard > div {
+  padding: 1rem; }
+  .dashboard > div:nth-child(1) {
+    background: #333333; }
+  .dashboard > div:nth-child(2) {
+    background: #383838; }
+  .dashboard > div:nth-child(3) {
+    background: #3d3d3d; }
+  .dashboard > div h1, .dashboard > div h2 {
+    margin: 0 0 0.2rem 0; }
+  .dashboard > div a {
+    text-decoration: none; }
+    .dashboard > div a.mkr-link {
+      color: #2b908f; }
+    .dashboard > div a.j5-link {
+      color: #ecdb43; }
+  .dashboard > div p {
+    margin: 0; }
+
+div#about h1 span:nth-of-type(1) {
+  color: #2b908f;
+  font-weight: 400; }
+
+div#about h1 span:nth-of-type(2) {
+  color: #90ee7e; }
+
+div#sensorValues {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  user-select: none; }
+  div#sensorValues div.sensor-values {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    text-align: center; }
+    div#sensorValues div.sensor-values > div {
+      font-size: 4em;
+      font-weight: 200; }
+      div#sensorValues div.sensor-values > div span {
+        margin-left: 10px;
+        font-size: .4em; }
+    div#sensorValues div.sensor-values > label {
+      font-size: 1.5em; }
+    div#sensorValues div.sensor-values div.temperature {
+      color: #2b908f; }
+    div#sensorValues div.sensor-values div.light {
+      color: #90ee7e; }
+    div#sensorValues div.sensor-values div.moisture {
+      color: #f45b5b; }
+
+@media screen and (max-width: 500px) {
+  div#about {
+    display: none; }
+  div#sensorValues {
+    flex-direction: column;
+    font-size: .8em;
+    align-items: center; }
+    div#sensorValues div.sensor-values {
+      flex-direction: row;
+      align-items: flex-end; }
+      div#sensorValues div.sensor-values label {
+        margin-left: 10px;
+        margin-bottom: 10px; } }
+
+@media screen and (max-height: 430px) {
+  div#about {
+    display: none; }
+  div#sensorValues {
+    flex-direction: row;
+    font-size: .5em; }
+    div#sensorValues div.sensor-values > label {
+      font-size: 1em; } }
