--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ block content
       p This system will be using the <a href="https://www.arduino.cc/en/Main/ArduinoMKR1000" class="mkr-link">Arduino MKR1000</a> running the latest Standard Firmata Wifi sketch. The Firmata library allows us access to the board via a Node app using <a href="http://johnny-five.io" class="j5-link">Johnny-five.io</a>.
     div#sensorValues
       div.sensor-values
-        div.temperature 85.0<span>°F</span>
+        div.temperature 85<span>°F</span>
         label Temperature
       div.sensor-values
         div.light 20<span>%</span>
@@ -17,11 +17,11 @@ block content
       div.sensor-values
         div.moisture 0<span>%</span>
         label Moisture
+      div.sensor-values
+        div.users 1
+        label Users
 
     div#sensorData
-
-  #container
-    #chart
 
 block page_scripts
   script(src='/javascripts/chart.js')
