--- a/views/index.jade
+++ b/views/index.jade
@@ -8,13 +8,13 @@ block content
         span  Plant Monitoring System
       p This system will be using the <a href="https://www.arduino.cc/en/Main/ArduinoMKR1000" class="mkr-link">Arduino MKR1000</a> running the latest Standard Firmata Wifi sketch. The Firmata library allows us access to the board via a Node app using <a href="http://johnny-five.io" class="j5-link">Johnny-five.io</a>.
     div#sensorValues
-      div.sensor-values
+      div.sensor-values(data-url='/temperature')
         div.temperature 85<span>°F</span>
         label Temperature
-      div.sensor-values
+      div.sensor-values(data-url='/light')
         div.light 20<span>%</span>
         label Light
-      div.sensor-values
+      div.sensor-values(data-url='/moisture')
         div.moisture 0<span>%</span>
         label Moisture
       div.sensor-values
@@ -25,4 +25,12 @@ block content
 
 block page_scripts
   script(src='/javascripts/chart.js')
+  script.
+    var url = null;
+    $('div.sensor-values').on('click', function (e) {
+      url = $(e.currentTarget).data('url');
+      if (!url) { return; }
+
+      window.location.href = $(e.currentTarget).data('url')
+    })
 
