--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,9 @@ html, body {
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif; }
 
+.hide {
+  display: none !important; }
+
 #main-column {
   min-height: 100%;
   display: flex;
@@ -63,6 +66,8 @@ div#sensorValues {
     flex-direction: column;
     flex-wrap: nowrap;
     text-align: center; }
+    div#sensorValues div.sensor-values:hover {
+      cursor: pointer; }
     div#sensorValues div.sensor-values > div {
       font-size: 4em;
       font-weight: 200; }
@@ -79,6 +84,16 @@ div#sensorValues {
       color: #f45b5b; }
     div#sensorValues div.sensor-values div.users {
       color: #7798BF; }
+
+div#detail-container {
+  flex: 2 1 0;
+  padding: 0;
+  margin: 0; }
+
+div#master-container {
+  flex: 1 1 0;
+  padding: 0;
+  margin: 0; }
 
 @media screen and (max-width: 500px) {
   div#about {
