--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,9 +65,17 @@ div#sensorValues {
     flex: 1;
     flex-direction: column;
     flex-wrap: nowrap;
-    text-align: center; }
+    text-align: center;
+    border-radius: 5px;
+    transition: background-color 250ms ease-out; }
     div#sensorValues div.sensor-values:hover {
       cursor: pointer; }
+      div#sensorValues div.sensor-values:hover#temperature {
+        background-color: rgba(43, 144, 143, 0.05); }
+      div#sensorValues div.sensor-values:hover#light {
+        background-color: rgba(144, 238, 126, 0.05); }
+      div#sensorValues div.sensor-values:hover#moisture {
+        background-color: rgba(244, 91, 91, 0.05); }
     div#sensorValues div.sensor-values > div {
       font-size: 4em;
       font-weight: 200; }
@@ -76,14 +84,22 @@ div#sensorValues {
         font-size: .4em; }
     div#sensorValues div.sensor-values > label {
       font-size: 1.5em; }
+      div#sensorValues div.sensor-values > label:hover {
+        cursor: pointer; }
     div#sensorValues div.sensor-values div.temperature {
       color: #2b908f; }
     div#sensorValues div.sensor-values div.light {
-      color: #90ee7e; }
+      color: #90ee7e;
+      transition: background-color 300ms ease-in;
+      border-radius: 5px; }
     div#sensorValues div.sensor-values div.moisture {
       color: #f45b5b; }
     div#sensorValues div.sensor-values div.users {
       color: #7798BF; }
+      div#sensorValues div.sensor-values div.users:hover {
+        cursor: default !important; }
+  div#sensorValues div#users div.users:hover, div#sensorValues div#users label:hover {
+    cursor: default; }
 
 div#detail-container {
   flex: 2 1 0;
@@ -120,3 +136,7 @@ div#master-container {
       align-items: center; }
       div#sensorValues div.sensor-values > label {
         font-size: 1em; } }
+
+/* Highcharts styling for tooltip */
+.highcharts-tooltip {
+  font-size: 2em !important; }
