--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -11,6 +11,10 @@ $blue-grey: #7798BF;
 // colors: ["#2b908f", "#90ee7e", "#f45b5b", "#7798BF", "#aaeeee", "#ff0066", "#eeaaee",
 //       "#55BF3B", "#DF5353", "#7798BF", "#aaeeee"],
 
+/* Highcharts styling for tooltip */
+.highcharts-tooltip {
+  font-size: 2em !important; 
+}
 
 html, body {
   height: 100%;
